--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,4 +28,4 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: '.'
+          path: 'web'
