--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -24,6 +24,9 @@ jobs:
           # directory to generate the artifact
           FOLDER: .
 
+      - name: test
+        run: ls .
+
       # Step 3. Upload the artifact
       - name: Upload artifact
         uses: actions/upload-artifact@v2
