--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
           FOLDER: .
 
       - name: test
-        run: ls .
+        run: ls -R .
 
       # Step 3. Upload the artifact
       - name: Upload artifact
