--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,4 +54,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v2
         with:
-          artifact-name: web
+          artifact_name: web
