--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,7 +31,10 @@ jobs:
       
       # Step 3. Compress
       - name: Create artifact
-        run: tar -czf artifact.tar.gz ./web --hard-dereference
+        run: |
+          rm ./web/index.html
+          tar -czf artifact.tar.gz ./web --hard-dereference
+          
 
       # Step 4. Upload the artifact
       - name: Upload artifact
@@ -56,6 +59,6 @@ jobs:
       # Step 1. Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v2
         with:
           artifact_name: artifact
