--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -33,6 +33,8 @@ jobs:
       - name: Create artifact
         run: |
           ls -R .
+          # 赋予文件写权限
+          chmod +w ./web/index.html
           rm ./web/index.html
           tar -czf artifact.tar.gz ./web --hard-dereference
           
