--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -61,7 +61,4 @@ jobs:
       # Step 1. Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/upload-pages-artifact@v1
-        with:
-          name: artifact
-          path: /_site
+        uses: actions/deploy-pages@v1
