--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -49,4 +49,4 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           name: artifact
-          path: ./artifact.tar.gz
+          path: ./_site
