--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,25 +28,10 @@ jobs:
         with:
           # directory to generate the artifact
           FOLDER: .
-      
-      # Step 3. Compress
-      - name: Create artifact
-        run: |
-          sudo rm ./web/README.md
-          sudo mv ./web ./_site
-          ls -R .
-          tar -czf artifact.tar.gz ./_site --hard-dereference
           
-
-      # Step 4. Upload the artifact
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: artifact
-          path: ./_site
-
+      # Step 3. Deploy
       - name: Deploy to GitHub Pages
         uses: actions/upload-pages-artifact@v1
         with:
           name: artifact
-          path: ./_site
+          path: ./web
