--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -35,3 +35,8 @@ jobs:
         with:
           name: artifact
           path: ./web
+          
+      # Step 4. Deploy?
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
