--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -41,4 +41,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
         with:
-          artifact_name: web
+          artifact_name: artifact
