--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
 
+  # Job 1. Generate the Artifact
   pages_directory_listing:
 
     runs-on: ubuntu-latest
@@ -11,25 +12,34 @@ jobs:
 
     steps:
 
+      # Step 1. Checkout Repository
       - name: Checkout Repository
         uses: actions/checkout@v1
         with:
+          # branch to check out
           ref: main
 
+      # Step 2. Generate the artifact
       - name: Generate Directory Listings
         uses: Zeyu-Xie/Lavender-Dir-Listing@v1
         with:
+          # directory to generate the artifact
           FOLDER: .
           
+      # Step 3. Upload Pages Artifact
       - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v2
         with:
           name: github-pages
           path: .
           
+  # Job 2. Deploy the Artifact
   deploy_the_artifact:
 
     needs: pages_directory_listing
+    
+    permissions:
+      pages: write
     
     runs-on: ubuntu-latest
     name: Deploy the Artifact
@@ -40,6 +50,7 @@ jobs:
 
     steps:
 
+	  # Step 1. Deploy to GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1          
