--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Example Using Lavender Dir Listing Version 1.0.0
 
 on: [push]
 
@@ -21,7 +21,7 @@ jobs:
 
       # Step 2. Generate the artifact
       - name: Generate Directory Listings
-        uses: Zeyu-Xie/Lavender-Dir-Listing@v1
+        uses: Zeyu-Xie/Lavender-Dir-Listing@v1.0.0
         with:
           # directory to generate the artifact
           FOLDER: .
